# municipal_scrape_workspace

./: .gitignore  .gitmodules  =3.9.5  CC_INDEX_DOWNLOAD_PLAN.md  CC_ORCHESTRATOR_README.md  CONSOLIDATE_PARQUET_FILES.md  DUCKDB_INDEX_DESIGN.md  DUCKDB_INDEX_QUICKREF.md  DUCKDB_INDEX_STATUS.md  DUCKDB_POINTER_INDEX_COMPLETE.md  DUCKDB_POINTER_TOOLS.md  FILE_MIGRATION_MAP.md  FINAL_LAYOUT_README.md  FINAL_REORGANIZATION_README.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  NEW_SCRIPTS_SUMMARY.txt  ORCHESTRATOR_REFACTORING.md  OVERNIGHT_BUILD_PROGRESS.md  OVERNIGHT_BUILD_STATUS.md  PARALLEL_DUCKDB_QUICKSTART.md  POINTER_INDEX_DESIGN.md  POST_MIGRATION_GAPS.md  QUICKSTART.md  README.md  REFACTORED_STRUCTURE.md  REFACTORING_INDEX.md  REFACTORING_PROJECT_SUMMARY.md  REFACTORING_SUMMARY.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_FINAL.md  REORGANIZATION_OPTIONS.md  REORGANIZATION_PLAN.md  REPO_LAYOUT_README.md  TEST_SUITE_DOCUMENTATION.md  TEST_SUITE_SUMMARY.txt  benchmark_cc_domain_search.py  benchmark_ccindex_parquet_vs_duckdb.py  benchmark_domain_pointer_index.py  benchmark_duckdb_domain.py  (+96 more)
.github/workflows/: python-ci.yml
archive/ccindex/backups/: search_parallel_duckdb_indexes.py.bak
archive/ccindex/converters/: convert_final_three.py  convert_final_three_correct.py  convert_missing_with_chunks.py
archive/ccindex/superseded/: README.md  build_duckdb_from_sorted_parquet.py  compare_crawl_results.py  search_domain_pointer_index.py  search_duckdb_domain.py  search_duckdb_pointer_domain.py  sort_parquet_external_merge.py  validate_and_mark_sorted.py
benchmarks/ccindex/: README.md  benchmark_cc_duckdb_search.py  benchmark_cc_pointer_search.py  benchmark_results.json  benchmark_rowgroup_slice.py  benchmark_rowgroup_year_vs_collection.py
data/: us_towns_and_counties_urls.csv
data/federal_domains/: 1.json  2.json  3.json  get agencies.py
data/federal_laws/: __init__.py  us_constitution.jsonld
data/state_domains/: state_domains.py
data/state_laws/Oregon/: README.md  __init__.py  check_parser_warnings.py  oregon_ors_downloader.py  oregon_ors_jsonld_parser.py  ors_urls_from_pointers.txt  ors_urls_from_pointers_cleaned.txt
docs/: COMMON_CRAWL_USAGE.md  CRITICAL_FINDINGS.md  HYBRID_LEGAL_IR_SPEC.md  HYBRID_LEGAL_REASONING_EXECUTION_PLAYBOOK.md  HYBRID_LEGAL_REASONING_IMPROVEMENT_PLAN.md  HYBRID_LEGAL_REASONING_TODO.md  PARALLEL_AGENTIC_DISCOVERY_README.md  PLAYWRIGHT_PANEL_E2E_REPORT.md  README.md  REASONER_ARCHITECTURE.md  REPO_LAYOUT_PLAN.md  REPO_STRUCTURE.md  TEST_SUITE_SUMMARY.txt
docs/ccindex/: DUCKDB_INDEX_DESIGN.md  DUCKDB_INDEX_STATUS.md  DUCKDB_POINTER_INDEX_COMPLETE.md  DUCKDB_POINTER_INDEX_COMPLETE.md.bak  INDEX_ARCHITECTURE.md  INDEX_HIERARCHY.md
docs/common_crawl_search_engine/: README.md
docs/municipal_scrape_workspace/: README.md  REPO_LAYOUT_PLAN.md
docs/pipeline/: COLLECTION_TRACKING_FEATURE.md  OVERNIGHT_BUILD_STATUS.md  PIPELINE_CONFIG_GUIDE.md
docs/refactoring/: REFACTORING_CHECKLIST.md  REFACTORING_QUICKSTART.md  REFACTORING_ROADMAP.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.txt  REPO_LAYOUT_README.md
docs/reorganization/: README.md  REORGANIZATION_PLAN.md
scripts/: convert_federal_register_jsonld_to_parquet.py  convert_uscode_jsonld_to_parquet.py  run_federal_scrapers.py
scripts/american_law/: README.md  reindex_kyle_slop_to_parquet.py
scripts/debug/: admin_probe_al_ri_vt.py  inspect_url_lcp_cluster.py  minimize_duckdb_sort_segfault.py  parquet_integrity_scan.py  repeat_duckdb_sort_until_segfault.py
scripts/kyle_slop/: convert_us_towns_and_counties_csv_to_jsonl.py  generate_remaining_after_cc_run.py  generate_remaining_targets.py  inventory_kyle_slop.py  scrape_remaining_with_web_archiving.py
scripts/ops/: analyze_formal_logic_entropy.py  analyze_formal_logic_low_tail.py  cc_meta_orchestrator.py  check_cc_download_status.sh  cleanup_space.sh  comprehensive_rebuild.sh  convert_duckdb_to_parquet.py  convert_legal_corpus_to_formal_logic.py  download_cc_indexes.sh  download_cc_indexes_5years.sh  final_rebuild.sh  hf_push_cc_pointers_by_collection.sh  hf_upload_cc_pointers_by_collection.py  manage_cc_2year.sh  monitor_dual_run.sh  overnight_build_duckdb_index.sh  overnight_build_pointer_index.sh  overnight_duckdb_complete.sh  overnight_sort_and_index.sh  parallel_rebuild.sh  prefetch_recovery_sources.sh  quickref_duckdb.sh  quickstart_duckdb_index.sh  rebuild_empty_ccindex_shards.py  rebuild_overnight.sh  rebuild_with_sorted_ranges.sh  recover_parquet_after_rf.sh  resume_all_existing_parquet_after_pid.py  run_all_states_warc_from_partitions.sh  run_all_states_warc_until_complete.sh  run_force_reindex_impacted.sh  run_formal_logic_regression_check.sh  run_metaindex_2021_2025.sh  run_pipeline_years.py  run_resort_reindex_years.py  run_state_agencies_missing_parallel.py  sort_unsorted_sequential.sh  start_overnight_reindex.sh  upload_meta_indexes_to_hf.py  validate_2025_collections.sh  (+3 more)
src/common_crawl_search_engine/: __init__.py  cli.py  collinfo.json  dashboard.py  dashboard_e2e.py  mcp_client.py  mcp_server.py
src/municipal_scrape_workspace/: __init__.py  check_archive_callbacks.py  cli.py  hybrid_legal_ir.py  orchestrate_municipal_scrape.py
tests/: __init__.py  conftest.py  test_agentic_url_archive_cache.py  test_brave_search_adapter.py  test_legal_data_merge_state_filters.py  test_legal_ops_wrappers.py  test_publish_canonical_legal_corpus_to_hf.py  test_report_agentic_daemon_pending_retry.py
tests/common_crawl_search_engine/: test_mcp_client.py  test_mcp_client_network.py
tests/test_ccindex/: __init__.py  test_cli.py  test_imports.py  test_wrappers.py
tests/test_municipal_scrape/: __init__.py
tmp/all_states_court_rules_audit_20260321/: daemon_state.json
tmp/az_probe_90/: result.json
tmp/az_probe_90_bg/: result.json
tmp/az_probe_90_rootvenv/: result.json
tmp/az_probe_90_rootvenv_bg/: result.json
tmp/ri_state_court_rules_after_patch/: daemon_state.json
tmp/ri_state_court_rules_after_patch_clean/: daemon_state.json
tmp/ri_state_laws_after_patch_2/: daemon_state.json
(+277 files in other folders)
